--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "erebus-core",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Base web library",
   "repository": "https://github.com/codelightful/erebus-core",
   "main": "./src/erebus.mjs",
@@ -39,7 +39,8 @@
     "rollup": "^2.53.2",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
-    "sinon": "^11.1.2"
+    "sinon": "^11.1.2",
+    "xhr-mock": "^2.5.1"
   },
   "dependencies": {}
 }
