Enhancing the event API on elements

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "erebus-core",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "Base web library",
   "repository": "https://github.com/codelightful/erebus-core",
   "main": "./src/erebus.mjs",
@@ -12,7 +12,7 @@
     "test": "mocha",
     "coverage": "c8 mocha",
     "lint": "eslint ./src/**/**.mjs",
-    "prepare": "npm-run-all lint test build"
+    "validate": "npm-run-all lint test build"
   },
   "keywords": [
     "ui"
