--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "erebus-core",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "Base web library",
   "repository": "https://github.com/codelightful/erebus-core",
+  "browser": "./dist/erebus-core.min.js",
   "main": "./src/erebus.mjs",
   "scripts": {
     "start": "npm-run-all --parallel watch serve",
@@ -36,9 +37,7 @@
     "jsdom": "^17.0.0",
     "mocha": "^9.2.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.5",
     "rollup": "^2.53.2",
-    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "sinon": "^11.1.2",
     "xhr-mock": "^2.5.1"
