--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "erebus-core",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "Base web library",
   "repository": "https://github.com/codelightful/erebus-core",
   "browser": "./dist/erebus-core.min.js",
@@ -24,22 +24,24 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.14.5",
-    "@babel/core": "^7.14.6",
-    "@babel/eslint-parser": "^7.15.8",
-    "@babel/preset-env": "^7.14.7",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.2",
-    "@web/dev-server": "^0.1.18",
-    "c8": "^7.9.0",
-    "eslint": "^7.32.0",
-    "jsdom": "^17.0.0",
-    "mocha": "^9.2.0",
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.19.3",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/preset-env": "^7.19.4",
+    "@rollup/plugin-babel": "^6.0.0",
+    "@rollup/plugin-eslint": "^9.0.0",
+    "@rollup/plugin-json": "^5.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.0",
+    "@web/dev-server": "^0.1.34",
+    "c8": "^7.12.0",
+    "eslint": "^8.27.0",
+    "jsdom": "^20.0.1",
+    "mocha": "^10.0.0",
     "npm-run-all": "^4.1.5",
-    "rollup": "^2.53.2",
+    "rollup": "^2.79.1",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
-    "sinon": "^11.1.2",
+    "sinon": "^14.0.1",
     "xhr-mock": "^2.5.1"
   }
 }
