--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "erebus-core",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "Base web library",
   "repository": "https://github.com/codelightful/erebus-core",
   "browser": "./dist/erebus-core.min.js",
@@ -24,24 +24,24 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.19.3",
-    "@babel/core": "^7.19.3",
-    "@babel/eslint-parser": "^7.19.1",
-    "@babel/preset-env": "^7.19.4",
-    "@rollup/plugin-babel": "^6.0.0",
-    "@rollup/plugin-eslint": "^9.0.0",
-    "@rollup/plugin-json": "^5.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.0",
-    "@web/dev-server": "^0.1.34",
-    "c8": "^7.12.0",
-    "eslint": "^8.27.0",
-    "jsdom": "^20.0.1",
-    "mocha": "^10.0.0",
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.4",
+    "@babel/eslint-parser": "^7.21.3",
+    "@babel/preset-env": "^7.21.4",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-eslint": "^9.0.3",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.4.0",
+    "@web/dev-server": "^0.1.37",
+    "c8": "^7.13.0",
+    "eslint": "^8.37.0",
+    "jsdom": "^21.1.1",
+    "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
-    "rollup": "^2.79.1",
+    "rollup": "^3.20.2",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "sinon": "^14.0.1",
+    "sinon": "^15.0.3",
     "xhr-mock": "^2.5.1"
   }
 }
